@@ -162,7 +162,7 @@ sub run {
         $ipmask = $1 if ($line =~ /\S*mask:(\S+)/i || $line =~ /\S*netmask\s+(\S+)/);
         $macaddr = $1 if ($line =~ /hwadd?r\s+(\w{2}:\w{2}:\w{2}:\w{2}:\w{2}:\w{2})/i || $line =~ /\s*ether\s+(\w{2}:\w{2}:\w{2}:\w{2}:\w{2}:\w{2})/i);
         $status = 1 if ($line =~ /^\s+UP\s/ || $line =~ /^\S*UP,/);
-        $type = $1 if $line =~ /link encap:(\S+)/i;
+        $type = $1 if ($line =~ /link encap:(\S+)/i || $line =~ /^\s+(loop|ether).*\((\S+)\)/i);
     }
 
 
